scenes our technology fixing spacing

--- a/src/scenes/ourTechnology/ourTechnology.css
+++ b/src/scenes/ourTechnology/ourTechnology.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px 20px 30px;
+  padding: 0 20px 30px;
   width: auto;
   height: auto;
   background-color: #1c1c1c;
